--- a/src/app/articulos/detalle/detalle.component.html
+++ b/src/app/articulos/detalle/detalle.component.html
@@ -1,5 +1,13 @@
 @if (articulo) {
-  <h2>{{articulo.nombre}} </h2>
-  <p>{{articulo.categoria}}</p>
-  <p>{{articulo.precio}}</p>
+  <mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title>{{articulo.nombre}} </mat-card-title>
+      <mat-card-subtitle>{{articulo.categoria}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>{{articulo.precio}}</mat-card-content>
+    <mat-card-actions>
+      <button mat-button routerLink='/form/{{id}}'>Editar</button>
+    </mat-card-actions>
+  </mat-card>
+
 }
